--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -6,7 +6,7 @@
       <div class="col-4">
         <div class="card-trip">
           <%= link_to cocktail do %>
-            <%= image_tag images.sample %>
+            <%= image_tag cycle(images) %>
           <% end %>
           <div class="card-trip-infos">
             <div>
