--- a/app/views/components/_card.html.erb
+++ b/app/views/components/_card.html.erb
@@ -1,10 +1,7 @@
-<% images = ['https://images.unsplash.com/photo-1424591093900-514bab956faf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60', 'https://images.unsplash.com/photo-1542600176-9d2c4bb4bc1a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60', 'https://images.unsplash.com/photo-1560508180-03f285f67ded?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60', 'https://images.unsplash.com/photo-1485265449635-ca623a55e95c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60', 'https://images.unsplash.com/photo-1461823385004-d7660947a7c0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60'] %>
-
 <div class="container align-content-center">
   <div class="row justify-content-center">
-    <div class="card" style="width: 40rem;">
-      <%= image_tag images.sample, class: "card-img-top", alt: "Mojito"%>
-  <!--     <img src="<% images.sample %>" class="card-img-top" alt="Mojito"> -->
+    <div class="card">
+      <%= cl_image_tag @cocktail.photo, height: 300, width: 400, crop: :fill %>
       <div class="card-body">
         <h5 class="card-title"><%= @cocktail.name %></h5>
       <% if @cocktail.doses.present? %>
