--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,6 +2,7 @@
   background-size: cover;
   background-position: center;
   padding: 94px 0;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
 
   h1 {
     margin: 0;
