--- a/app/views/components/_banner.html.erb
+++ b/app/views/components/_banner.html.erb
@@ -1,6 +1,5 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1551024709-8f23befc6f87?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= @cocktail.photo %>');">
   <div class="container">
-    <h1>Cocktail Mania <strong>brings you</strong> the <strong>best cocktails</strong>!</h1>
-    <p>Change your life and drink cocktails.</p>
+    <h1><%= @cocktail.name %></h1>
   </div>
 </div>
