dded banner to index page

--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,2 +1,5 @@
+<div style="border-bottom: 1px solid black">
+  <%= cl_image_tag @cocktail.photo, height: 300, width: 400, crop: :fill %>
+</div>
 <%= render 'components/card' %>
 
