--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,24 +1,35 @@
 .banner {
   background-size: cover;
   background-position: center;
-  padding: 94px 0;
+  height: 100vh;
+  padding: 190px 330px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  display: flex;
+  justify-content: center;
+
+  .banner-box {
+    background: rgba(230,230,230,0.4);
+    padding: 20px;
+    width: 650px;
+  }
 
   h1 {
     margin: 0;
     color: white;
+    opacity: .7;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-    font-size: 32px;
+    font-size: 80px;
     font-weight: bold;
+    text-align: center;
   }
 
   p {
-    font-size: 20px;
+    font-size: 24px;
+    text-align: center;
     color: white;
     opacity: .7;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   }
 
 }
-
 
