--- a/app/views/components/_banner.html.erb
+++ b/app/views/components/_banner.html.erb
@@ -1,5 +1,8 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= @cocktail.photo %>');">
-  <div class="container">
-    <h1><%= @cocktail.name %></h1>
+<div class="banner flex-container" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://images.unsplash.com/photo-1560508180-03f285f67ded?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60');">
+   <div class="flex-item">
+    <div class="banner-box">
+      <h1>Miss cocktail</h1>
+      <p>Change your life, drink cocktails</p>
+    </div>
   </div>
 </div>
