--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -9,6 +9,10 @@
 
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn-non-flat my-2 my-sm-0" type="submit">Search</button>
+    </form>
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <%= link_to "Add a cocktail", new_cocktail_path, class: "nav-link btn-non-flat" %>
