--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,8 +1,9 @@
 .btn-flat {
   color: white;
-  padding: 8px 24px;
+  padding: 6px 24px;
   background: #BCABFD;
   transition: background 0.3s ease;
+  border-radius: 4px;
 }
 
 .btn-flat:hover {
@@ -12,11 +13,12 @@
 
 .btn-non-flat {
   color: #BCABFD;
-  padding: 8px 24px;
+  padding: 6px 24px;
   margin-right: 8px;
   border: 1px solid #BCABFD;
   background: white;
   transition: background 0.3s ease;
+  border-radius: 4px;
 }
 
 .btn-non-flat:hover {
