--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,8 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-bottom: 2px solid rgba(200,200,200,0.5);
+  padding-top: 20px;
 }
 
 .navbar-lewagon .navbar-collapse {
