--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   <body>
     <%= render 'components/navbar' %>
     <%= yield %>
+    <%= render 'components/footer' %>
     <%= javascript_include_tag "application" %>
     <%= javascript_pack_tag "application" %>
 </html>
