--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,5 +1,4 @@
-<div class="container col-6-offset-3">
+<div class="container col-6-offset-3 my-5" style="width: 700px">
   <h1>New cocktail</h1>
   <%= render 'components/form', cocktail: @cocktail %>
 </div>
-w
