--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container col-6-offset-3">
+<div class="container col-6-offset-3 my-5" style="width: 700px" >
   <h1>Add a new ingredient to <%= @cocktail.name %></h1>
   <div>
     <%= simple_form_for [@cocktail, @dose] do |f| %>
