--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,10 +1,12 @@
-<div class="container col-6-offset-3">
+<div class="container col-6-offset-3 my-5" style="width: 700px" >
 
-  <h1>New review for <%=  @cocktail.name %></h1>
+  <h1> New review for <%=  @cocktail.name %> </h1>
+
   <div>
     <%= simple_form_for [@cocktail, @review] do |f| %>
+    <%= f.input :description %>
     <%= f.input :rating, collection: (0..5) %>
-    <%= f.submit "Add the Rating", class: "btn-flat" %>
+    <%= f.submit "Add Review", class: "btn-flat" %>
     <% end %>
     <div>
       <%= link_to 'Cancel', cocktails_path %>
