--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,24 +1,17 @@
 .banner {
   background-size: cover;
-  background-position: center;
+  background-position: bottom;
   height: 100vh;
   padding: 190px 330px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   justify-content: center;
 
-  .banner-box {
-    background: rgba(230,230,230,0.6);
-    padding: 20px;
-    width: 650px;
-  }
-
   h1 {
     margin: 0;
     color: white;
-    opacity: .7;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-    font-size: 80px;
+    font-size: 100px;
     font-weight: bold;
     text-align: center;
   }
