--- a/app/views/components/_banner.html.erb
+++ b/app/views/components/_banner.html.erb
@@ -1,8 +1,5 @@
-<div class="banner flex-container" style="background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url('https://images.unsplash.com/photo-1560508180-03f285f67ded?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60');">
-   <div class="flex-item">
-    <div class="banner-box">
-      <h1>Miss cocktail</h1>
-      <p>Change your life, drink cocktails</p>
-    </div>
+<div class="banner flex-container" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://res.cloudinary.com/du7l2fe4u/image/upload/v1570446325/photo-1481391564276-da6fcacaee31_spclka.jpg');">
+  <div class="banner-box">
+    <h1>Miss<br>Cocktail</h1>
   </div>
 </div>
