--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,14 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800|Poiret+One&display=swap" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= render 'components/navbar' %>
-    <%= yield %>
-    <%= render 'components/footer' %>
+    <div id="container-wrapper">
+      <%= render 'components/navbar' %>
+      <div id="container-main">
+        <%= yield %>
+        <%#= render 'components/footer' %>
+      </div>
+    </div>
     <%= javascript_include_tag "application" %>
     <%= javascript_pack_tag "application" %>
+  </body>
 </html>
