front-end cocktail index

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -13,7 +13,8 @@
 }
 
 #vertical-link:hover {
-  text-decoration: line-through;
+  text-decoration: underline;
+  text-decoration-color: #EF9488;
 }
 
 .github-logo {
