--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,6 +4,6 @@
 @import "navbar";
 @import "banner";
 @import "button";
-@import "card-trip";
 @import "cards";
 @import "footer";
+@import "cocktail-card";
