--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,19 +1,15 @@
-<%# images = ['https://images.unsplash.com/photo-1424591093900-514bab956faf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60', 'https://images.unsplash.com/photo-1560508180-03f285f67ded?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60', 'https://images.unsplash.com/photo-1485265449635-ca623a55e95c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60', 'https://images.unsplash.com/photo-1461823385004-d7660947a7c0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60'] <%>
-<%# <%= render 'components/banner' %> %>
 <div class="container my-5">
-  <div class="row justify-content-center">
+  <div class="cards">
     <% @cocktails.each do |cocktail| %>
-      <div class="col-4">
-        <div class="card-trip">
-          <%= link_to cocktail do %>
-            <%= cl_image_tag cocktail.photo.url(:thumbnail), height: 300, width: 400, crop: :thumb %>
-          <% end %>
-          <div class="card-trip-infos">
-            <div>
-              <h2><%= cocktail.name %></h2>
-            </div>
+      <div class="cocktail-card">
+        <%= link_to cocktail do %>
+          <div class="cocktail-image">
+            <%= cl_image_tag cocktail.photo.url, height: 400, width: 280, crop: :fill %>
           </div>
-        </div>
+          <div class="cocktail-name">
+            <h2><%= cocktail.name %></h2>
+          </div>
+        <% end %>
       </div>
     <% end %>
   </div>
