--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,27 +1,4 @@
-.btn-flat {
-  color: white;
-  padding: 6px 24px;
-  background: #BCABFD;
-  transition: background 0.3s ease;
-  border-radius: 4px;
-}
-
-.btn-flat:hover {
-  background: #D7B8FF;
-  color: white;
-}
-
-.btn-non-flat {
-  color: #BCABFD;
-  padding: 6px 24px;
-  margin-right: 8px;
-  border: 1px solid #BCABFD;
-  background: white;
-  transition: background 0.3s ease;
-  border-radius: 4px;
-}
-
-.btn-non-flat:hover {
-  background: #D7B8FF;
-  color: white;
+.btn {
+  color: #EF9488;
+  padding: 0;
 }
