--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -7,7 +7,7 @@
             <%= cl_image_tag cocktail.photo.url, height: 400, width: 280, crop: :fill %>
           </div>
           <div class="cocktail-name">
-            <h2><%= cocktail.name %></h2>
+            <h2><%= cocktail.name.upcase %></h2>
           </div>
         <% end %>
       </div>
