--- a/app/views/partials/_rating.html.erb
+++ b/app/views/partials/_rating.html.erb
@@ -1,9 +1,11 @@
-<% if cocktail.reviews.present? %>
-  <% ratings = [] %>
-  <% cocktail.reviews.each do |review| %>
-  <% ratings << review.rating.to_i %>
-  <% end %>
-  Rating <%= ratings.sum / ratings.length %>
-<% else %>
-  <%= '' %>
-<% end %>
+<%# if cocktail.reviews.present? %>
+  <%# ratings = [] %>
+  <%# cocktail.reviews.each do |review| %>
+  <%# ratings << review.rating.to_i %>
+  <%# end %>
+  <%#= ratings.sum / ratings.length %>
+<%# else %>
+  <%#= '' %>
+<%# end %>
+
+<%= rating_display(cocktail) %>
