--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -17,14 +17,7 @@
 }
 
 .cocktail-description-ingredients {
-  margin: 24px 0;
-
-  th {
-    font-size: 24px;
-    font-weight: lighter;
-    letter-spacing: 0.1rem;
-    padding: 0;
-  }
+  margin: 24px 0 80px 0;
 
   td {
     font-size: 16px;
@@ -36,14 +29,7 @@
 }
 
 .cocktail-description-reviews {
-  margin: 24px 0;
-
-  th {
-    font-size: 24px;
-    font-weight: lighter;
-    letter-spacing: 0.1rem;
-    padding: 0;
-  }
+  margin: 80px 0;
 
   td {
     font-size: 16px;
@@ -67,4 +53,11 @@
   list-style: none;
   margin: 0 0 8px 0;
   max-width: 100%;
+}
+
+.description-header {
+  font-size: 24px;
+  font-weight: lighter;
+  letter-spacing: 0.1rem;
+  padding: 0;
 }
