--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,4 +1,6 @@
-<div class="container col-6-offset-3 my-5" style="width: 700px">
-  <h1>New cocktail</h1>
-  <%= render 'components/form', cocktail: @cocktail %>
+<div class="container my-5" style="padding: 40px">
+  <h1>Add a new cocktail</h1>
+  <div class="form">
+    <%= render 'components/form', cocktail: @cocktail %>
+  </div>
 </div>
