--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,4 +1,21 @@
-.btn {
+.add-btn {
   color: #EF9488;
-  padding: 0;
+  background: transparent;
+  border: none;
+  font-size: 16px;
+}
+
+.add-btn:hover {
+  color: #000000;
+  background: transparent;
+  text-decoration: none;
+}
+
+.create-btn {
+  float: right;
+  margin-bottom: 24px;
+}
+
+.create-btn:hover {
+  text-decoration: none;
 }
