--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,10 +1,10 @@
-<div class="container col-6-offset-3 my-5" style="width: 700px" >
-  <h1>Add a new ingredient to <%= @cocktail.name %></h1>
-  <div>
+<div class="container my-5" style="padding: 40px" >
+  <div class="form">
+    <h1>Add a new ingredient to <%= @cocktail.name %></h1>
     <%= simple_form_for [@cocktail, @dose] do |f| %>
     <%= f.input :description %>
     <%= f.association :ingredient %>
-    <%= f.submit "Add", class: "btn-flat" %>
+    <%= f.submit "ADD INGREDIENT", class: "add-btn create-btn" %>
     <% end %>
   </div>
 </div>
