changed banner image

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,28 +1,16 @@
 .banner {
   background-size: cover;
-  background-position: bottom;
+  background-position: center;
   height: 100vh;
-  padding: 190px 330px;
+  padding: 80px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
-  justify-content: center;
 
   h1 {
     margin: 0;
-    color: white;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-    font-size: 100px;
-    font-weight: bold;
-    text-align: center;
+    font-size: 120px;
+    text-align: left;
   }
-
-  p {
-    font-size: 24px;
-    text-align: center;
-    color: white;
-    opacity: .7;
-    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  }
-
 }
 
