--- a/app/views/components/_banner.html.erb
+++ b/app/views/components/_banner.html.erb
@@ -1,5 +1,5 @@
-<div class="banner flex-container" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://res.cloudinary.com/du7l2fe4u/image/upload/v1570446325/photo-1481391564276-da6fcacaee31_spclka.jpg');">
-  <div class="banner-box">
+<div class="banner flex-container" style="background-image: url('https://res.cloudinary.com/du7l2fe4u/image/upload/v1570515672/cocktail_banner_1_p0elxd.jpg');">
+  <div class="miss-header">
     <h1>Miss<br>Cocktail</h1>
   </div>
 </div>
