adjusted line hight and float

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RailsMisterCocktail</title>
+    <title>Miss Cocktail</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <%= csrf_meta_tags %>
@@ -15,7 +15,6 @@
       <%= render 'components/navbar' %>
       <div id="container-main">
         <%= yield %>
-        <%#= render 'components/footer' %>
       </div>
     </div>
     <%= javascript_include_tag "application" %>
