--- a/app/views/components/_banner.html.erb
+++ b/app/views/components/_banner.html.erb
@@ -1,5 +1,6 @@
 <div class="banner flex-container" style="background-image: url('https://res.cloudinary.com/du7l2fe4u/image/upload/v1570516846/cocktail_banner_3_wlp3cn.jpg');">
   <div class="miss-header">
-    <h1>Miss<br>Cocktail</h1>
+    <h1>MISS</h1><br>
+    <h1>COCKTAIL</h1>
   </div>
 </div>
