--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -20,6 +20,6 @@
     </div>
   </div>
   <div class="cocktail-description-image">
-    <%= cl_image_tag @cocktail.photo, height: 700, width: 550, crop: :fill %>
+    <%= cl_image_tag @cocktail.photo, class: "img" %>
   </div>
 </div>
