--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <div id="container-wrapper">
       <%= render 'components/navbar' %>
-      <div id="container-main">
+      <div id="container__main">
         <%= yield %>
       </div>
     </div>
