--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -4,32 +4,14 @@
   grid-gap: 16px;
 }
 
-@media (min-width: 100px) and (max-width: 575px) {
-  .cards {
-    grid-template-columns: 1fr;
-  }
-}
-
-@media (min-width: 576px) {
-  .cards {
-    grid-template-columns: 1fr;
-  }
-}
-
-@media (min-width: 768px) {
+@media(max-width: 768px) {
   .cards {
     grid-template-columns: 1fr 1fr;
   }
 }
 
-@media (min-width: 992px) {
+@media(max-width: 375px) {
   .cards {
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-}
-
-@media (min-width: 1200px) {
-  .cards {
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr; 
   }
 }
