--- a/app/assets/stylesheets/components/_cocktail-card.scss
+++ b/app/assets/stylesheets/components/_cocktail-card.scss
@@ -1,5 +1,6 @@
 .cocktail-card {
   margin: 40px;
+  max-width: 280px;
 
   .cocktail-image {
     margin-bottom: 16px;
@@ -23,5 +24,25 @@
     color: black;
     border-bottom: 1px solid #EF9488;
     text-decoration: none;
+  }
+}
+
+@media(max-width: 768px) {
+  .cocktail-card {
+    margin: 0;
+
+    h2 {
+      font-size: 24px;
+    }
+  }
+}
+
+@media(max-width: 375px) {
+  .cocktail-card {
+    margin: 0;
+  }
+
+  h2 {
+    font-size: 16px;
   }
 }
