--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,12 @@
 .logo {
-  width: 150px;
+  width: 80px;
   margin-bottom: 80px;
 }
 
 #vertical-link {
   writing-mode: vertical-lr;
   transform: rotate(180deg);
-  margin: 16px 48px;
+  padding: 40px 24px;
   text-decoration: none;
   color: black;
   letter-spacing: 0.1rem;
@@ -18,11 +18,11 @@
 }
 
 .github-logo {
-  margin: 80px 48px 0 48px;
+  padding: 80px 24px 0 24px;
 }
 
 .fa-github {
   color: black;
-  font-size: 24px;
-  padding: 16px;
+  font-size: 16px;
+  padding: 8px;
 }
