--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -1,13 +1,13 @@
-<ul class="nav flex-sm-column">
-  <li class="nav-item">
-    <%= link_to root_path do %>
-      <%= cl_image_tag("https://cdn.dribbble.com/users/1828677/screenshots/6153056/cocktail2.gif", class:"logo") %>
-    <% end %>
-  </li>
-  <li class="nav-item">
+<ul class="nav flex-column bd-sidebar" id="sidebar">
+  <%= link_to root_path do %>
+    <%= cl_image_tag("https://cdn.dribbble.com/users/1828677/screenshots/6153056/cocktail2.gif", class:"logo") %>
+  <% end %>
+  <div class="sidebar-welcome d-flex align-items-center">
+  </div>
+  <div class="nav-item">
     <%= link_to "Browse", cocktails_path, class:"nav-link", id:"vertical-link" %>
-  </li>
-  <li class="nav-item">
+  </div>
+  <li class="nav-item ">
     <%= link_to "Add Cocktail", new_cocktail_path, class:"nav-link", id:"vertical-link" %>
   </li>
   <li class="nav-item github-logo">
